--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-success">Login</button>
             </div>
         </form>
         <div class="guest-login" style="text-align: center; margin-top: 15px;">
